--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.iml
 .gradle
+/*/.gradle
 /local.properties
+.idea
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
@@ -9,6 +11,7 @@
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
+/*/build
 /captures
 .externalNativeBuild
 .cxx
